# rust-queue

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: integration-tests.yml
dev-env/: worker.dockerfile
src/: lib.rs  main.rs
src/macros/: mod.rs
src/models/: app_state.rs  application.rs  cache.rs  custom_job.rs  data_connection.rs  event_bus.rs  event_dispatcher.rs  job.rs  job_mapper.rs  mod.rs  queue.rs  registry.rs  request.rs  resolve.rs  resource.rs  router.rs  service_providers.rs  template.rs  type_map.rs
src/repositories/: job_repository.rs
src/schema/: jobs.rs
templates/: index.html
tests/: application_integration_test.rs  dispatch_integration_test.rs  dispatch_test.rs  event_bus_integration.rs  event_dispatcher_integration_test.rs  job_integration_test.rs  mod.rs  queue_integration_test.rs  templates_integration_test.rs
tests/common/: mod.rs
