[package]
name = "rust-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
axum = "0.7.5"
async-trait = "0.1.79"
serde_qs = "0.12"
serde_urlencoded = "0.7"

