[package]
name = "rust-queue"
version = "0.1.0"
edition = "2021"

[features]
default = ["tera_templates"]
tera_templates = []
askama_templates = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
axum = { version = "0.7.5", features = [ "json" ] }
async-trait = "0.1.79"
serde_qs = "0.12"
serde_urlencoded = "0.7"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1.1"
tera = { version = "1", default-features = false }
askama = "0.12.1"
